--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,6 +40,10 @@ alembic = "^1.13.0"
 python-dateutil = "^2.8.2"
 networkx = "^3.2.0"
 rich = "^13.7.0"
+python-dotenv = "^1.0.0"
+
+# GUI
+streamlit = "^1.30.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.4"
